[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/roboto/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://prefabs/ui/ammo_counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/roboto/RobotoCondensed-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/roboto/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://prefabs/ui/player_stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/ui/hud.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="DynamicFont" id=5]
size = 20
extra_spacing_char = 1
font_data = ExtResource( 5 )

[node name="HUD" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HurtOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 928.0
margin_bottom = 508.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 2

[node name="MidContainer0" type="VBoxContainer" parent="Margin/Container"]
visible = false
margin_right = 896.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/Container/MidContainer0"]
margin_left = 320.0
margin_right = 576.0
margin_bottom = 40.0
rect_min_size = Vector2( 256, 40 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 4
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[X] Fire
[X] Iron sight / Scope"
text = "[X] Fire
[X] Iron sight / Scope"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomContainer" type="VBoxContainer" parent="Margin/Container"]
margin_top = 428.0
margin_right = 896.0
margin_bottom = 476.0
mouse_filter = 2
size_flags_vertical = 0
custom_constants/separation = 8
alignment = 2

[node name="Bottom" type="HBoxContainer" parent="Margin/Container/BottomContainer"]
margin_right = 896.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_vertical = 8

[node name="PlayerStats" parent="Margin/Container/BottomContainer/Bottom" instance=ExtResource( 6 )]
visible = false

[node name="Subtitle" type="Label" parent="Margin/Container/BottomContainer/Bottom"]
visible = false
margin_left = 346.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 44.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "CHECKPOINT REACHED"
align = 1
valign = 1

[node name="AmmoCounter" parent="Margin/Container/BottomContainer/Bottom" instance=ExtResource( 2 )]
visible = false
margin_left = 784.0
margin_top = 8.0
margin_right = 896.0
margin_bottom = 48.0

[node name="Tween" type="Tween" parent="."]

[node name="TimerAmmo" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="TimerAmmo" to="." method="_on_TimerAmmo_timeout"]
